# orpocopo2

./: README.md  changelog.txt
TrainingManager/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  TrainingManager.pro  TrainingManager.pro.user.182206e  TrainingManager.pro.user.2180be6  TrainingManager.pro.user.753f2af  data.h  fmodificarentrenamiento.cpp  fmodificarentrenamiento.h  fmodificarentrenamiento.ui  fnuevoentrenamiento.cpp  fnuevoentrenamiento.h  fnuevoentrenamiento.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  object_script.TrainingManager.Debug  object_script.TrainingManager.Release  training.h  training.h.autosave  ui_fmodificarentrenamiento.h  ui_fnuevoentrenamiento.h  ui_mainwindow.h  utils.cpp  utils.h
countsamples/: countsamples  countsamples.cpp  file.txt
detectmassive/: CMakeLists.txt  DBConnection.h  detect_movement.cpp  rutines.cpp  rutines.h  tracker.cpp  trackerdetect.cpp
detectmassive/build_win/: CMakeCache.txt  Makefile  cmake_install.cmake  conf.ini  confgarage.ini  runmano2.bat
detectmassive/build_win/trainings/brazohorizontal/: stage2.xml
detectmassive/build_win/trainings/brazorectangulo/: stage0.xml  stage3.xml  stage7.xml
detectmassive/build_win/trainings/brazovertical/: stage4.xml
detectmassive/build_win/trainings/cabeza24/: stage19.xml  stage5.xml  stage9.xml
detectmassive/build_win/trainings/cabezafolder/: stage0.xml
detectmassive/build_win/trainings/complete24x24/: stage1.xml  stage14.xml  stage4.xml  stage5.xml  stage9.xml
detectmassive/build_win/trainings/cuerpogondola40/: stage12.xml  stage13.xml
detectmassive/build_win/trainings/cuerpogondola_prec256/: stage1.xml  stage2.xml  stage6.xml  stage7.xml  stage9.xml
detectmassive/build_win/trainings/garagecabeza/: stage3.xml
detectmassive/build_win/trainings/garagecabeza40/: stage2.xml
detectmassive/build_win/trainings/garagecostadocabeza/: stage0.xml
detectmassive/build_win/trainings/garagemano/: cascade.xml
detectmassive/build_win/trainings/garagemano24/: stage0.xml  stage1.xml  stage3.xml
detectmassive/build_win/trainings/manovacia/: stage1.xml  stage15.xml
detectmassive/build_win/trainings/manovacia100s/: stage0.xml  stage1.xml  stage2.xml  stage5.xml
detectmassive/build_win/trainings/manovacia40/: cascade.xml  stage14.xml  stage2.xml  stage3.xml  stage7.xml  stage9.xml
detectmassive/build_win/trainings/upbody/: stage0.xml  stage13.xml  stage5.xml
dnn_object_detection/: CMakeLists.txt
roigondola/: CMakeLists.txt  roigondola.cpp  toolchain-windows.cmake
roipoligono/: CMakeLists.txt  roipoligono.cpp
trackerdetect/: .goutputstream-25C5XY  .~lock.README.md#  CMakeLists.txt  DBConnection.cpp  DBConnection.h  README.md  detect_movement.cpp  detect_movement.h  index.cpp  rutines.cpp  rutines.h  toolchain-windows.cmake  tracker.cpp  tracker.h  trackerdetect.cpp  trackerdetect_quilmes.cpp  trackerquilmes.cpp
trackerdetect/build_win/: CMakeCache.txt  Makefile  cmake_install.cmake  conf.ini  conf2.ini  run.bat  runmano2wine.bat
trackerdetect/build_win/trainings/brazohorizontal/: cascade.xml  stage0.xml  stage1.xml  stage4.xml
trackerdetect/build_win/trainings/brazorectangulo/: stage2.xml
trackerdetect/build_win/trainings/brazovertical/: stage0.xml  stage1.xml  stage2.xml
trackerdetect/build_win/trainings/cabeza24/: cascade.xml  stage0.xml  stage1.xml  stage10.xml  stage14.xml  stage17.xml  stage6.xml  stage7.xml
trackerdetect/build_win/trainings/cabeza35/: stage0.xml  stage1.xml  stage11.xml  stage12.xml  stage14.xml  stage18.xml  stage2.xml
trackerdetect/build_win/trainings/cabezafolder/: stage2.xml
trackerdetect/build_win/trainings/cuerpogondola40/: cascade.xml  stage1.xml  stage14.xml  stage3.xml  stage9.xml
trackerdetect/build_win/trainings/cuerpogondola_prec256/: stage10.xml  stage11.xml  stage13.xml  stage3.xml  stage5.xml  stage8.xml
trackerdetect/build_win/trainings/garagecabeza/: cascade.xml  stage0.xml  stage1.xml  stage4.xml
trackerdetect/build_win/trainings/garagemano/: stage1.xml
trackerdetect/build_win/trainings/garagemano24/: stage4.xml
trackerdetect/build_win/trainings/manovacia100s/: stage3.xml  stage4.xml
trackerdetect/build_win/trainings/manovacia40/: stage0.xml  stage11.xml  stage12.xml  stage4.xml  stage5.xml  stage8.xml
trackerdetect/build_win/trainings/upbody/: stage1.xml  stage19.xml  stage3.xml  stage4.xml  stage6.xml  stage8.xml
trackerdetect/build_win/trainings/xml/: cascade.xml  params.xml  stage1.xml
trackerdetectcito/: CMakeCache.txt  (+12 more)
(+26 files in other folders)
