cmake_minimum_required(VERSION 2.8)
project( trackerdetect )
set(CMAKE_CXX_STANDARD 11)
find_package( OpenCV REQUIRED )
add_library( tracker tracker.cpp )
add_library( iniparser ini.cpp )
add_library( rutines rutines.cpp)
add_library( dbconn DBConnection.cpp )
add_library( detect_mov detect_movement.cpp )
add_executable( trackerdetect trackerdetect.cpp )
target_link_libraries( trackerdetect dbconn mysqlclient rutines tracker detect_mov ${OpenCV_LIBS} )
