cmake_minimum_required(VERSION 2.8)
project( trackerdetect )
set (CMAKE_MODULE_PATH /mnt/datos/orco/orpocopo2/trackerdetect )
set(CMAKE_CXX_STANDARD 11)
find_package( OpenCV REQUIRED )
include_directories(/mylibs/mariadb-conn-c_win/include/mariadb)
add_library( inireader INIReader.cpp)
add_library (inireaderc ini.c)
add_library( tracker tracker.cpp )
add_library( rutines rutines.cpp)
add_library( dbconn DBConnection.cpp)
add_library( detect_mov detect_movement.cpp )
add_library( index index.cpp )

#set(FULL_PATH_TO_MYSQL_CONNECTOR_CPP_DIR /mnt/d/mysql-mariadbx64)

link_directories(/mylibs/mariadb-conn-c_win/lib/mariadb/)

add_executable( trackerdetect trackerdetect.cpp )
add_executable( trackerdetect_quilmes trackerdetect_quilmes.cpp )
IF(CMAKE_CROSSCOMPILING)
   set(LINK_LIBS dbconn rutines tracker detect_mov index libmariadb inireader inireaderc ${OpenCV_LIBS})
   #target_link_libraries( trackerdetect dbconn rutines tracker detect_mov index libmariadb inireader inireaderc ${OpenCV_LIBS} )
ELSE(CMAKE_CROSSCOMPILING)
	set(LINK_LIBS dbconn mysqlclient rutines tracker detect_mov index inireader inireaderc ${OpenCV_LIBS})
  # target_link_libraries( trackerdetect dbconn mysqlclient rutines tracker detect_mov index inireader inireaderc ${OpenCV_LIBS} )
ENDIF(CMAKE_CROSSCOMPILING)

target_link_libraries(trackerdetect ${LINK_LIBS})
target_link_libraries(trackerdetect_quilmes ${LINK_LIBS})

